<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testing_btn_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/alpha_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha_animation"/>

    <Button
        android:id="@+id/scale_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale_animation"/>

    <Button
        android:id="@+id/rotation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotation_animation"/>

    <Button
        android:id="@+id/parallax_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parallax_animation"/>

    <Button
        android:id="@+id/zoom_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zoom_out_animation"/>
</LinearLayout>
