<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:clipChildren="false"
                android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/testing_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alpha_animation"
            android:id="@+id/alpha_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scale_animation"
            android:id="@+id/scale_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotation_animation"
            android:id="@+id/rotation_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parallax_animation"
            android:id="@+id/parallax_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/path_and_translation_animation"
            android:id="@+id/path_and_translation_btn"/>

    </LinearLayout>

</RelativeLayout>
